Bug #29525 batching incorrect
Submitted: 3 Jul 2007 18:13 Modified: 4 Jul 2007 16:30
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:CGE 6.2 OS:Any
Assigned to: Tomas Ulin Target Version:

[3 Jul 2007 18:13] Tomas Ulin
Description:
m_unsent_bytes not handled correctly for batching in handler

How to repeat:
.
[4 Jul 2007 1:31] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/30215

ChangeSet@1.2562, 2007-07-03 18:27:30+02:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #29525 batching incorrect
  - "execute" is not local to handler, only perform reset of transaction related params
at execute
  - the transaction related params (m_unsent_bytes) may _not_ be reset at start of
statement, there might be batched operations pending
[4 Jul 2007 11:58] Jon Stephens
Documented bugfix for telco-6.2.4 release, left PP status.
[4 Jul 2007 14:23] Jon Stephens
Documented fix for telco-6.3.1; left status unchanged.