Bug #29525 batching incorrect - "execute" is not local to handler, only perform reset of transaction related params at execute - the transaction related params (m_unsent_bytes) may _not_ be reset at start of statement, there might be batched operations pending